--- a/index.html
+++ b/index.html
@@ -6,5 +6,23 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="menu">
+      <div class="box">
+        <div class="title">
+          <div class="insidebox">
+            <h1 class="text">MENU HERE</h1>
+          </div>
+        </div>
+        <ul class="list">
+          <li class="item">HOME</li>
+          <li class="item">CONTACTS</li>
+          <li class="item">OUR TEAM</li>
+          <li class="item">FAQ</li>
+          <li class="item">ABOUT</li>
+          <li class="item">NEWS</li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
